--- a/other_bills_task/client/views/viewBill.html
+++ b/other_bills_task/client/views/viewBill.html
@@ -594,7 +594,9 @@
             overflow: visible !important; /* Remove scrollbar for printing. */
         }
         .modal-header,
-        .modal-header *,.modal-footer,.modal-footer * {
+        .modal-header *,
+        .modal-footer,
+        .modal-footer * {
             visibility: hidden;
             display: none;
         }
